fix: update button font size and padding to prevent overlap

--- a/src/components/Dropdown/styles.module.scss
+++ b/src/components/Dropdown/styles.module.scss
@@ -116,4 +116,10 @@ button.chevron {
   padding-right: 10px;
   display: inline-block;
   width: 100%;
+  font-size: 0.85rem;
+
+  @media (min-width: $breakpoint-tablet) {
+    font-size: 1rem;
+    padding-right: 10px;
+  }
 }
